static/css/main.css
/* ... */
.cancel .recommendation {
  background-color: #c51300;
}
.cancel .number {
  color: #ff2710;
}

.uncertain .recommendation {
  background-color: #fcb100;
}
.uncertain .number {
  color: #fcb100;
}

.goahead .recommendation {
  background-color: #90e10b;
}
.goahead .number,
.green {
  color: #90e10b;
}

.detail-button {
  background-color: transparent;
  border-width: 0px;
  min-width: 132px;
  margin-bottom: 12px;
  padding: 0;
  text-align: right;
}

.less-visible7 {
  color: white;
  mix-blend-mode: normal;
  opacity: 0.7;
}

.less-visible8 {
  color: white;
  mix-blend-mode: normal;
  opacity: 0.8;
}

/*
* Model
*/

.population > label {
  padding-left: 0px !important;
}
.population > div {
  margin-top: -6px;
  margin-left: 0px;
}

strong {
  color: white;
}

.containment_measure {
  padding-top: 10px;
}

.mitigation-strength {
  margin-left: auto;
  display: flex;
}

.mitigation-strength > div > .btn-secondary {
  min-width: 76px;
}

.alert-warning > p {
  margin-bottom: 0px;
}

@media only screen and (max-width: 991px) {
  .title {
    text-align: center;
  }
  .population > label {
    margin-top: 20px;
    margin-right: 0px;
  }
  .mitigation-strength {
    margin-top: 8px;
  }
}

@media only screen and (min-width: 992px) {
  .title {
    text-align: left;
  }
  .population {
    margin-left: -52px;
  }
  .population > label {
    margin-top: 2px;
    margin-right: 20px;
  }
}

@media only screen and (min-width: 576px) {
  .large {
    font-size: 35px;
  }
}

@media only screen and (max-width: 575px) {
  .large {
    font-size: 25px;
  }
  .navbar ul li {
    display: block;
  }
  .navbar ul {
    padding: 0;
  }

  .nav-masthead .nav-link {
    border-bottom: 0.1rem solid transparent;
  }
  .nav-masthead .active {
    color: #fff;
    border-bottom-color: #fff;
  }
  .nav-masthead .nav-link {
    padding-left: 0px;
  }
  .container-wrapper {
    display: block;
  }
  .container-left {
    flex: none;
    width: 100%;
  }
  .container-right {
    flex: none;
    width: 100%;
  }
  .container-right-footer {
    position: static;
  }
  .main-wrapper {
    padding: 15px 15px;
  }

  #my_dataviz {
    margin: 0 -24px;
  }

  .detail-button {
    text-align: left;
  }
  .alert-warning > p {
    margin-bottom: 0px;
    font-size: 0.75rem;
  }
}

.fill-available-width {
  width: 100%;
}

textarea {
  height: 200px;
}

.color1 {
  color: #edcdab;
}
.color2 {
  color: #edb77e;
}
.color3 {
  color: #e97f0f;
}
.color4 {
  color: #9ac9d9;
}
.color5 {
  color: #5abbdb;
}
.color6 {
  color: #007ca6;
}

.legend {
  opacity: 1 !important;
  user-select: auto;
  width: 100% !important;
  background-color: transparent;
  background: transparent !important;
  font: 12px sans-serif;
  text-align: center;
}

div.tooltip {
  position: absolute;
  text-align: center;
  width: 70px !important;
  height: auto;
  padding: 2px;
  font: 12px sans-serif;
  color: #fff;
  background: #050547;
  border: 1px solid #212121;
  border-radius: 8px;
  pointer-events: none;
  background-color: #342e47 !important;
  margin-left: 16px;
  margin-top: -8px;
}

.overlay {
  fill: none;
  stroke: none;
  pointer-events: all;
}

.line .crosshair {
  fill: none;
  stroke-width: 1px;
}

.line .crosshair {
  stroke: white;
  opacity: 0.2;
}

#my_dataviz {
  vertical-align: top;
  overflow: hidden;
}

.js-plotly-plot .plotly .svg-container {
  position: relative;
}

.js-plotly-plot .plotly .main-svg:first-child {
  position: relative;
}

/*
* General
*/
.underlined {
  text-decoration: underline;
}

table th,
table td {
  padding: 0.1em 0.7em;
}

.dropdown-list {
  height: auto;
  overflow-y: scroll;
  text-transform: uppercase;
}

.alert-dismissible .close:hover,
.custom-modal .close:hover {
  color: white;
}

.react-datepicker-wrapper {
  display: block !important;
}

.mitigation-item {
  margin-top: 8px;
}

.custom-modal {
  position: absolute;
  top: 40px;
  bottom: 40px;
  background-color: #222028;
  overflow: auto;
  border-radius: 4px;
  outline: none;

  width: 100%;
  transform: translate(-50%, 0);
  max-width: 1000px;
  left: 50%;
}

@media (min-width: 768px) {
  .custom-modal {
    padding: 20px;
  }
}

.custom-modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.8);
}

.custom-modal-inner {
  margin: 20px;
}

